# Projects

./: README.md
Android App/: README - Modèle - V1.3.md
Android App/AppProject/: settings.gradle.kts
Android App/AppProject/app/: build.gradle.kts
Android App/AppProject/app/src/main/: AndroidManifest.xml
Android App/AppProject/app/src/main/assets/: requesters.csv
Android App/AppProject/app/src/main/res/layout/: activity_admin_voir_clients.xml  activity_animation.xml  activity_assembler_commands.xml  activity_assembler_order_view_all.xml  activity_cart.xml  activity_create_order.xml  activity_requester.xml  activity_requester_history.xml  activity_shop.xml  activity_signup.xml  (+7 more)
AppProject/app/src/main/assets/: stock_items.csv
AppProject/app/src/main/res/drawable/: cell_border.xml
AppProject/app/src/main/res/layout/: activity_admin.xml  activity_assembler.xml  activity_main.xml  activity_requester_commands.xml  activity_storekeeper.xml  activity_storekeeper_addsoftware2.xml  item_cart.xml  item_component_stock.xml
AppProject/app/src/main/res/menu/: menu_assembler_order_all_view.xml
AppProject/app/src/main/res/navigation/: mobile_navigation3.xml  nav_graph.xml
AppProject/gradle/: libs.versions.toml
AppProject/gradle/wrapper/: gradle-wrapper.properties
Bohnanza Card Game/: CMakeLists.txt  Card.cpp  Card.h  CardFactory.cpp  CardFactory.h  Chain.cpp  Chain.h  Deck.cpp  Deck.h  DiscardPile.cpp  DiscardPile.h  Hand.cpp  Hand.h  Main.h  Player.cpp  Player.h  Table.cpp  Table.h  TradeArea.cpp  TradeArea.h  main.cpp
UML/: Diagramme_de_classe_et_séquence.md
(+50 files in other folders)
